# krex

./: .gitignore  .gitmodules  CMakeLists.txt
applications/BenchmarkApplication/: CMakeLists.txt
applications/BenchmarkApplication/custom_utilities/: common.cpp  common.hpp
applications/BenchmarkApplication/drivers/: distance_benchmark.cpp  profiler_benchmark.cpp
applications/WRApp/: CMakeLists.txt  WRApp.cpp  WRApp_variables.cpp
applications/WRApp/include/wr_application/: WRApp.hpp  WRApp_variables.hpp
applications/WRApp/python_bindings/: AddIOToPython.cpp  AddMultiprocessingToPython.cpp  AddNumericToPython.cpp  AddPipesToPython.cpp  AddUtilsToPython.cpp  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  add_custom_utilities_to_python.hpp  wr_python_application.cpp
applications/WRApp/python_scripts/: __init__.py  mpi_utilities.py
applications/WRApp/python_scripts/checkpoint/: Checkpoint.py  Snapshot.py  __init__.py  mpi_utilities.py  processes.py
applications/WRApp/tests/: IntervalUtility_test.py  Journal_test.py  Snapshot_test.py
src/UtilityApplication/: .gitignore  CMakeLists.txt
src/UtilityApplication/bindings/: UtilityApplication.cpp  UtilityApplication.hpp  bindings_main.cpp
src/UtilityApplication/cases/: .gitignore
src/UtilityApplication/cases/aillt/: .gitignore  inference.py  main.json  main.py  materials.json  mesh.mdpa  training.py
src/UtilityApplication/cases/ailu/: .gitignore  inference.py  main.json  readme.md
src/UtilityApplication/cases/hierarchical_solver_cube/: test.py
src/UtilityApplication/cases/hierarchical_solver_multimaster/: MainKratos.py  ProjectParameters.json  rbe1_process.py
src/UtilityApplication/cases/hierarchical_solver_multimaster/meshes/: linear.mdpa  quadratic.mdpa
src/UtilityApplication/cases/hierarchical_solver_multimaster/solvers/: amgcl_raw_solver.json  gauss_seidel_solver.json
src/UtilityApplication/cases/hierarchical_solver_multislave/: .gitignore  ProjectParameters.json  diff.py  filter.py  plot.py  plot_props.sh  plot_restriction_process.py  readme.md  run.sh
src/UtilityApplication/cases/hierarchical_solver_multislave/meshes/: consistent_linear.mdpa  consistent_quadratic.mdpa  linear.mdpa  quadratic.mdpa
src/UtilityApplication/cases/hierarchical_solver_multislave/solvers/: hierarchical_solver.json
src/UtilityApplication/cases/hierarchical_solver_tetrahedra/: .gitignore  ProjectParameters.json
src/UtilityApplication/cases/hierarchical_solver_tetrahedra/meshes/: linear.mdpa  quadratic.mdpa
src/UtilityApplication/cases/hierarchical_solver_tetrahedra/solvers/: amgcl_solver.json
src/UtilityApplication/cases/hierarchical_solver_triangles/: .gitignore  MainKratos.py  ProjectParameters.json  run.sh
src/UtilityApplication/cases/hierarchical_solver_triangles/meshes/: linear.mdpa  quadratic.mdpa
src/UtilityApplication/cases/hierarchical_solver_triangles/solvers/: hierarchical_solver.json
src/UtilityApplication/cases/link/: MakeLinkConstraints.py  main.json  main.py  mesh.mdpa
src/UtilityApplication/cases/link2d/: .gitignore  MakeLinkConstraints.py  main.json  main.py  mesh.mdpa
src/UtilityApplication/cases/mixed_dimensions/: .gitattributes  .gitignore  flush_streams_process.py  main.json  main.py  materials.json  readme.md
src/UtilityApplication/cases/mixed_dimensions/linear_solvers/: cg.json
src/UtilityApplication/cases/mixed_dimensions/meshes/: 1_spring.mdpa
src/UtilityApplication/cases/mixed_dimensions/processes/: displacement_dirichlet_condition.json  flush_streams.json  hdf5_output.json  neumann_condition.json  (+4 more)
src/UtilityApplication/cases/pmg_cube/: .gitattributes  .gitignore  amgcl.json  amgclsmoother.json  amgclwrapper.json  defaultbs.json  gauss_seidel.json  main.json  main.py  plot_performance.py  pmgbs.json  printmatrix.json  standalone_amgcl_wrapper.json  standalone_amgcl_wrapper_dependent.json  standalone_amgcl_wrapper_independent.json
src/UtilityApplication/cases/pmg_cube_unconstrained/: .gitignore  main.json  main.py  make_multifreedom_constraints_process.py  make_point_load_conditions_process.py  pmgbs.json  run.sh
src/UtilityApplication/cases/pmg_multimaster/: main.json  run.sh
src/UtilityApplication/cases/pmg_multimaster_external_slave/: .gitattributes  run.sh
src/UtilityApplication/cases/pmg_multimaster_single_path/: .gitignore  main.json  run.sh
src/UtilityApplication/cases/pmg_multislave/: main.json  main.py  manual_restriction.py  run.sh
src/UtilityApplication/cases/pmg_multislave_reduced/: .gitignore  main.json  make_multifreedom_constraints_process.py  run.sh
src/UtilityApplication/cases/pmg_trebuchet/: .gitattributes  .gitignore  main.json  main.py  materials.json  no_mpc.json  rbe2_process.py  rbe3_process.py
src/UtilityApplication/cases/pmg_triangles/: .gitignore  main.json  pmgbs.json
src/UtilityApplication/cases/pmg_triangles_mfc/: .gitignore  make_multifreedom_constraints_process.py  pmgbs.json
src/UtilityApplication/cases/pmg_triangles_mfc_external/: main.json  main.py  make_multifreedom_constraints_process.py  pmgbs.json
src/UtilityApplication/cases/surface_slide/: .gitignore  MakeSurfaceSlidingConstraint.py  main.json  main.py  mesh.mdpa
src/UtilityApplication/drivers/: check_higher_order_elements.cpp  find_hanging_nodes.cpp  geo2entity.cpp  group_trebuchet_arm_nodes.cpp  linearizemesh.cpp  matrix_product.cpp  med2mdpa.cpp  mksubpartitions.cpp  test_hierarchical_solver.cpp
src/UtilityApplication/include/UtilityApp/: AMGCLWrapper.hpp  CanonicalizeElementsProcess.hpp  ElementFactory.hpp  FEUtilities.hpp  FindElementsByCrossSection.hpp  ModelPartIO.hpp  MultifreedomConstraintToElementProcess.hpp  common.hpp
src/UtilityApplication/scripts/: MultifreedomConstraintToElementProcess.py  __init__.py  canonicalize_elements_process.py  find_elements_by_cross_section_process.py  restriction.py  test_hierarchical_solver.py
src/UtilityApplication/src/: AMGCLWrapper.cpp  CanonicalizeElementsProcess.cpp  FEUtilities.cpp  FindElementsByCrossSection.cpp  ModelPartIO.cpp  MultifreedomConstraintToElementProcess.cpp
(+80 files in other folders)
